# browser_use_patched

./: .gitignore  README.md  pyproject.toml
src/browser_use_patched/: __init__.py  patch_browser_use.py
src/browser_use_patched/utils/: formatting.py
