[project]
name = "browser-use-patched"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jourdelune", email = "jourdelune863@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "browser-use>=0.9.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
